# Business_Analytics_Wildfire

./: .gitignore  ABOUT_THIS_PROJECT.md  README.md  SETUP.md  pyproject.toml
data_processing/: DATA_PROCESSING.md  SETUP.md
data_processing/docs/: CMIP6_DOWNLOAD.md
data_processing/notebooks/: analysis.ipynb  data_preparation_Temperatures.ipynb  fire_occurrence_correlation.ipynb
data_processing/scripts/: cdsapirc.example  download_cmip6_tas.py
data_processing/src/: analyze_fire_temperature.py  config.py  data_preparation.py  merge_fire_temperature.py
fire-detection/: FIRE_DETECTION.md  fire_webcam_alarm.py
modelling_and_prediction/: __init__.py
modelling_and_prediction/backend/: __init__.py  main.py
modelling_and_prediction/data/processed/: county_population_2023.csv
modelling_and_prediction/frontend/: FRONTEND.md  __init__.py  index.html  package-lock.json  tailwind.config.ts
modelling_and_prediction/frontend/maps/: .gitkeep  MAPS.md  __init__.py  county_map_with_wind.py  map_pop.html
modelling_and_prediction/frontend/src/: App.tsx  index.css
modelling_and_prediction/frontend/src/components/: FireMapViewer.tsx  Header.tsx  HistoryPanel.tsx  MetricCard.tsx  PopulationFireMap.tsx  PredictionForm.tsx  PredictionResults.tsx  RealFireMap.tsx  RecommendationsPanel.tsx  RiskGauge.tsx
modelling_and_prediction/frontend/src/components/ui/: button.tsx
modelling_and_prediction/frontend/src/hooks/: useTheme.ts
modelling_and_prediction/frontend/src/lib/: api.ts  storage.ts  utils.ts
modelling_and_prediction/frontend/src/pages/: Index.tsx  Webcam.tsx
modelling_and_prediction/frontend/src/types/: prediction.ts
modelling_and_prediction/notebooks/: fire_model_size.ipynb
