[project]
name = "wildfire-risk"
version = "0.1.0"
description = "Wildfire risk prediction based on temperature and CMIP6 climate scenarios"
requires-python = ">=3.11.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["wildfire", "climate", "risk-modeling", "CMIP6", "temperature"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core data science
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "joblib>=1.4.0",
    # Machine learning models
    "lightgbm>=4.6.0",
    "xgboost>=2.0.0",
    # Visualization
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=5.24.0",
    # Backend API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    # Fire map generation
    "geopandas>=1.0.0",
    "folium>=0.18.0",
    "shapely>=2.0.0",
    # Fire detection
    "opencv-python>=4.8.0",
    "ultralytics>=8.3.228",
    "pygame>=2.5.0",
    # Optional dependencies for advanced features (install separately if needed)
    # "rasterio>=1.4.3",
    # "netcdf4>=1.7.3",
    # "xarray>=2025.11.0",
    # "pyarrow>=19.0.0",
    # "cdsapi>=0.7.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
wildfire-risk = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
